[gd_scene load_steps=9 format=3 uid="uid://eq33d2c1or61"]

[ext_resource type="Script" path="res://effects/explosion.gd" id="1_qdopg"]
[ext_resource type="SpriteFrames" uid="uid://reej05xcce11" path="res://effects/fire04/fire04.tres" id="2_n1j4n"]
[ext_resource type="AudioStream" uid="uid://75pq10oaqlkv" path="res://effects/explodemini.wav" id="3_pmhvt"]
[ext_resource type="Texture2D" uid="uid://dwsrguo3rrd4b" path="res://effects/smoke/smoke_01.png" id="4_luwtk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_j705u"]
radius = 5.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4s6l6"]
emission_shape = 1
emission_sphere_radius = 4.08
angle_min = -72.0
angle_max = 45.8
spread = 45.818
angular_velocity_min = -19.64
angular_velocity_max = 26.18
gravity = Vector3(0, 5, 0)
radial_accel_max = 0.91
tangential_accel_max = 1.81
scale_min = 0.0
scale_max = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wx8cl"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.623529, 0.584314, 0.564706, 1)
albedo_texture = ExtResource("4_luwtk")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_kwr5p"]
material = SubResource("StandardMaterial3D_wx8cl")
size = Vector2(5, 5)

[node name="explosion" type="Node3D"]
script = ExtResource("1_qdopg")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.423905, 0)
modulate = Color(1, 1, 0.356863, 1)
pixel_size = 0.1
billboard = 1
sprite_frames = ExtResource("2_n1j4n")
speed_scale = 2.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_j705u")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_pmhvt")
autoplay = true

[node name="Smoke" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.103617, 0, 0)
emitting = false
amount = 25
lifetime = 2.42
one_shot = true
explosiveness = 0.15
process_material = SubResource("ParticleProcessMaterial_4s6l6")
draw_pass_1 = SubResource("QuadMesh_kwr5p")

[connection signal="animation_finished" from="AnimatedSprite3D" to="." method="_on_animated_sprite_3d_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
[connection signal="finished" from="Smoke" to="." method="_on_smoke_finished"]
